Make sure drop down list is visible regardless of bg

--- a/frameworks/projects/SparkRoyale/src/main/resources/defaults.css
+++ b/frameworks/projects/SparkRoyale/src/main/resources/defaults.css
@@ -111,6 +111,11 @@ DropDownList
 	IBeadController: ClassReference("spark.components.beads.controllers.DropDownListController");
 }
 
+.DropDownDataGroup
+{
+	background-color: #FFFFFF;
+}
+
 List
 {
 	IBeadView: ClassReference("spark.components.beads.SkinnableContainerView");
